--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ rustdoc-args = ["--cfg", "docsrs", "--html-in-header", "katex-header.html"]
 [dev-dependencies]
 criterion = "0.3"
 rand_xorshift = "0.3"
+serde_json = "1.0.85"
 
 [[bench]]
 name = "hashtocurve"
@@ -57,6 +58,9 @@ lazy_static = { version = "1.4.0", optional = true }
 # gpu dependencies
 ec-gpu = { version = "0.2.0", optional = true }
 
+# serde dependencies
+serde = { version = "1.0.144", features = ["derive"], optional = true }
+
 [features]
 default = ["bits", "sqrt-table"]
 alloc = ["group/alloc", "blake2b_simd"]
@@ -64,3 +68,4 @@ bits = ["ff/bits"]
 gpu = ["alloc", "ec-gpu"]
 sqrt-table = ["alloc", "lazy_static"]
 repr-c = []
+# `serde` is an implicit feature due to being an optional dependnecy.
