--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -111,12 +111,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - id: rust
-        run: echo "toolchain=$(cat rust-toolchain)" >> $GITHUB_OUTPUT
-        shell: bash
-      - uses: dtolnay/rust-toolchain@master
+      - uses: dtolnay/rust-toolchain@beta
         with:
-          toolchain: ${{ steps.rust.outputs.toolchain }}
           components: clippy
       - name: Run Clippy (beta)
         run: cargo clippy --all-features --all-targets -- -W clippy::all
